# libworld2d-qt

./: .gitmodules  CMakeLists.txt
include/view/: item.hpp  scene.hpp
include/world/: item.hpp  scene.hpp  view.hpp
